@@ -1,8 +1,13 @@
 2008-02-20 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c: fixed bug in register pair loading when swapping register contents,
+          mostly fixes #1596270
+
+2008-02-20 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/peeph.def,
 	* src/z80/peeph-z80.def: moved peephole that breaks gbz80 to z80-specific peepholes,
-	  fixes #1806565.
+	  fixes #1806565
 
 2008-02-20 Maarten Brock <sourceforge.brock AT dse.nl>
 
